# QtTools

./: LICENSE  README.md
CMakeTemplate/: CMakeLists.txt
